sumo/tests/traci/VariableRetrieval/Lane/errors/UnknownID/testclient_out.traci
TraCITestClient output file. Date: Wed May 20 15:24:02 2009


-> Command sent: <SimulationStep>:
  TargetTime=5.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <GetVariable>:
  domID=163 varID=48 objID=xxx
.. Answered with error to command (163), [description: Lane 'xxx' is not known]

-> Command sent: <SimulationStep>:
  TargetTime=6.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
